(web) fixed horizontal scroll isue

--- a/SchoolSquirrel/src/app/app.component.scss
+++ b/SchoolSquirrel/src/app/app.component.scss
@@ -1,4 +1,5 @@
 main {
     height: calc(100vh - 48px);
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
